# monitor_everything

./: README.md  install.sh  pyproject.toml
monitor_everything/: checks.py  config.py  git_utils.py  hooks.py  main.py  prompt.py  runner.py
tests/: test_check_command.py  test_checks.py  test_config.py  test_config_commands.py  test_git_utils.py  test_hooks.py  test_prompt.py  test_runner.py  test_setup.py
